tests/should_pass/try_equal_error.fit
enum ApiError { Timeout, RateLimit }
fn fetch(u: String) -> Result<String, ApiError>

fn get_data(url: String) -> Result<String, ApiError> {
    let data = fetch(url)?
    Ok(data)
}
