tests/should_fail/try_no_result_fn.fit
// Exercises: '?' in a function whose return type is not Result (enclosingErr === null)
enum IoError { Disconnected }
fn read() -> Result<String, IoError>

fn test() -> String {
    read()?
}
